--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>ua.training</groupId>
   <artifactId>top</artifactId>
   <packaging>war</packaging>
-
   <version>1.0-SNAPSHOT</version>
-
   <name>Vacancy</name>
   <url>http://vacancy021.herokuapp.com/</url>
 
@@ -384,7 +380,7 @@
 
     <dependency>
       <groupId>org.jsoup</groupId>
-      <artifactId>jsoup</artifactId> <!--1.15.3-->   <!--???-->
+      <artifactId>jsoup</artifactId>
       <version>${jsoup.version}</version>
     </dependency>
 
