--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -77,7 +77,7 @@ login.registration=Registration &raquo;
 login.as_admin=Log-in as Admin
 login.as_user=Log-in as User
 login.project=Java Enterprise project
-login.body=with registration | authorization and role-based access rights (USER, ADMIN).<br/>Administrator can create | edit | delete users and vacancies, users can manage their profile via UI (via AJAX) and REST interface with basic authorization. Vacancies can be filtered | updated | marked (color of row changes, individual choice is stored in DB).<br/>REST controllers and all services are covered by JUnit tests using Spring MVC Test and Spring SecurityTest.<br/> HSQLDB is used for tests. Actual vacancies are stored in PostgreSQL (or H2DB) and updated from resources:<br/>
+login.body=with registration | authorization and role-based access rights (USER, ADMIN).<br/>Administrator can create | edit | delete users and vacancies, users can manage their profile via UI (via AJAX) and REST interface with basic authorization. Vacancies can be filtered | updated | marked (color of row changes, individual choice is stored in DB).<br/>REST controllers and all services are covered by JUnit tests using Spring MVC Test and Spring SecurityTest.<br/> HSQLDB (embeded) is used for tests. Actual vacancies are stored in PostgreSQL (or H2DB) and updated from resources:<br/>
 login.doc=Documentation
 
 password.password=Password :
